# eck

./: .gitignore  Cargo.toml  devlog.txt  go  hello.eck  todo.txt  wat.diff  watch
src/: grammar.rustpeg  main.rs
